--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".settings.SettingsActivity">
+        <activity android:name=".settings.SettingsActivity"
+            android:parentActivityName=".main.MainActivity">
 
         </activity>
     </application>
